examples/error/gen/grpc/divider/server/types.go
// Code generated by goa v2.0.0-wip, DO NOT EDIT.
//
// divider gRPC server types
//
// Command:
// $ goa gen goa.design/goa/examples/error/design -o
// $(GOPATH)/src/goa.design/goa/examples/error

package server

import (
	dividersvc "goa.design/goa/examples/error/gen/divider"
	dividerpb "goa.design/goa/examples/error/gen/grpc/divider/pb"
)

// NewIntOperands builds the payload of the "integer_divide" endpoint of the
// "divider" service from the gRPC request type.
func NewIntOperands(message *dividerpb.IntegerDivideRequest) *dividersvc.IntOperands {
	payload := &dividersvc.IntOperands{
		A: int(message.A),
		B: int(message.B),
	}
	return payload
}

// NewIntegerDivideResponse builds the gRPC response type from the result of
// the "integer_divide" endpoint of the "divider" service.
func NewIntegerDivideResponse(result int) *dividerpb.IntegerDivideResponse {
	message := &dividerpb.IntegerDivideResponse{}
	message.Field = int32(result)
	return message
}

// NewFloatOperands builds the payload of the "divide" endpoint of the
// "divider" service from the gRPC request type.
func NewFloatOperands(message *dividerpb.DivideRequest) *dividersvc.FloatOperands {
	payload := &dividersvc.FloatOperands{
		A: message.A,
		B: message.B,
	}
	return payload
}

// NewDivideResponse builds the gRPC response type from the result of the
// "divide" endpoint of the "divider" service.
func NewDivideResponse(result float64) *dividerpb.DivideResponse {
	message := &dividerpb.DivideResponse{}
	message.Field = result
	return message
}
